Fix/dark mode (#160)
* adding lable update and settings dialog close issue

* scrollbar color updated

* removed comment

--- a/src/index.css
+++ b/src/index.css
@@ -189,6 +189,8 @@
   --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.1);
   --shadow-xl: 0 1px 3px 0px rgb(0 0 0 / 0.1), 0 8px 10px -1px rgb(0 0 0 / 0.1);
   --shadow-2xl: 0 1px 3px 0px rgb(0 0 0 / 0.25);
+  --scrollbar-track: #f2f4f8;
+  --scrollbar-thumb: #555555;
 }
 
 .dark {
@@ -252,6 +254,8 @@
   --chart-3: #27d583; /* Green */
   --chart-4: #f5b342; /* Amber */
   --chart-5: #f87171; /* Red */
+  --scrollbar-track: #202630;
+  --scrollbar-thumb: #9da6b5;
 }
 
 @layer base {
@@ -263,4 +267,19 @@
     @apply bg-background text-foreground;
     letter-spacing: var(--tracking-normal);
   }
+}
+
+/* Webkit browsers (Chrome, Safari, Edge) */
+
+::-webkit-scrollbar-track {
+  background: var(--scrollbar-track);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb);
+}
+
+/* Firefox */
+* {
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
 }
